3 sections donegit add .!

--- a/index.html
+++ b/index.html
@@ -34,16 +34,43 @@
     </div>
 
     <div class="section2">
-        <p>Some random information</p>
+        <p class="section2-text">Some random information</p>
 
         <div class="img-folio-container">
-            <img src="" class="img-folio-item" alt="">
-            <img src="" class="img-folio-item" alt="">
-            <img src="" class="img-folio-item" alt="">
-            <img src="" class="img-folio-item" alt="">
+            <div class="img-folio-item">
+                <img src="" alt="" class="img-folio">
+                <p>img descriptor</p>
+            </div>
+           
+            <div class="img-folio-item">
+                <img src="" alt="" class="img-folio">
+                <p>img descriptor</p>
+            </div>
+
+            <div class="img-folio-item">
+                <img src="" alt="" class="img-folio">
+                <p>img descriptor</p>
+            </div>
+
+            <div class="img-folio-item">
+                <img src="" alt="" class="img-folio">
+                <p>img descriptor</p>
+            </div>
         </div>
     </div>
 
+    <div class="section3">
+        <div class="section3-container">
+            <div class="section3-item">
+                <p class="testimonial">This is a testimonial from a customer. Is it good? Maybe it's just filling up space or maybe people will read it. Who knows, all I know is that it looks nice!</p>
+
+            </div>
+
+            <div class="section3-item">
+                <p class="testimonial-subtext">-Thor, god of Thunder.</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
