Its donegit add .git add .git add .git add .git add .git add .!

--- a/index.html
+++ b/index.html
@@ -72,5 +72,24 @@
         </div>
     </div>
 
+    <div class="section4">
+
+        <div class="section4-container">
+            <div class="section4-left">
+                <p class="main">Call to action!</p>
+                <p class="sub">Sign up for our product by clicking that button over there!</p>
+            </div>
+
+            <div class="section4-right">
+                <button>Sign up</button>
+            </div>
+        </div>
+        
+    
+    </div>
+
+    <div class="footnote">
+        <p>Copyright © Darana 2022</p>
+    </div>
 </body>
 </html>
